# easyTrainer

./: LICENSE.txt  README.md  pyproject.toml
demo/: main.ipynb  predict-disney-stars-with-review.ipynb
demo/notebooks/: predict-disney-stars-with-review.ipynb
easyTrainer/config/: enum.py
easyTrainer/data/: base_preparator.py  text.py  utils.py
easyTrainer/models/: base_model.py  classifier.py  sklearn_classifier_model.py
tests/data/: test_base_preparator.py  test_text.py  test_utils.py
tests/models/: test_base_model.py  test_classifier.py
